Trying out input changes, and magic breast selection.

--- a/public/user_menu.html
+++ b/public/user_menu.html
@@ -3,8 +3,8 @@
 <div data-role="page" class="dialog-actionsheet" >
   <div data-role="content" data-theme="c">
   <h2>What</h2>
-<a data-role="button" data-rel="dialog" data-transition="slideup" data-inset="true" data-icon="home" href="/home" >Home</a>
-<a data-role="button" data-rel="dialog" data-transition="slidedown" data-inset="true" data-icon="gear" href="/user_config/edit" >User Settings</a>
+<a data-role="button" data-transition="slideup" data-inset="true" data-icon="home" href="/home" >Home</a>
+<a data-role="button" data-transition="slidedown" data-inset="true" data-icon="gear" href="/user_config/edit" >User Settings</a>
 <a data-role="button" data-transition="slideup" data-inset="true" data-icon="delete" href="/signout" data-theme="e">Signout</a>
 </div>
 </div>
