--- a/public/user_menu.html
+++ b/public/user_menu.html
@@ -5,6 +5,7 @@
   <h2>Menu</h2>
 <a data-role="button" data-transition="slideup" data-inset="true" data-icon="home" href="/home" >Home</a>
 <a data-role="button" data-transition="slidedown" data-inset="true" data-icon="gear" href="/user_config/edit" >User Settings</a>
+<a data-role="button" data-transition="slideup" data-inset="true" data-icon="grid" href="?mobile=0" >Full Site</a>
 <a data-role="button" data-transition="slideup" data-inset="true" data-icon="delete" href="/signout" data-theme="c">Signout</a>
 </div>
 </div>
